route guard added, khalti payment integrated,  route guards added, jwt decoder to extract roles added to auth service

--- a/src/app/components/product/product-detail/product-detail.component.css
+++ b/src/app/components/product/product-detail/product-detail.component.css
@@ -1,3 +1,17 @@
 img {
     height: 300px;
 }
+
+.product-details{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column  ;
+    height: 100%;
+    width: 100%;
+}
+
+.add-to-cart-button {
+    width:300px;
+}
