--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,23 +1,61 @@
 <div class="cart row container">
     <div class="col cart-items">
       <h2>Cart Items</h2>
-      <ul>
-        <li *ngFor="let item of cartItems">
-          <label>
-            <input type="checkbox" [(ngModel)]="item.isSelected" (change)="handleItemSelection($event, item)" />
-            
-          </label>
-          <span>  {{ item.product.name }}  </span>   {{item.product.price}}  <span> </span> <span>{{item.quantity}}</span>
-        </li>
-      </ul>
+      <div class="cart-items">
+        <div *ngFor="let cartItem of cartItems$ | async" class="cart-item container">
+          <div class="product-details">
+            <div class="product-info col">
+              <div class="row">
+                <div class="col">
+                  <h5>{{ cartItem.product.name }}</h5>
+                </div>
+                <div class="col form-check">
+                  <input class="form-check-input" type="checkbox" [(ngModel)]="cartItem.isSelected" (change)="handleItemSelection($event, cartItem)" />
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-2">
+                  <img width="100px" height="100px" [src]="cartItem.product.imageUrl" alt="{{ cartItem.product.name }}" class="product-image">
+                </div>
+                <div class="col">
+                  <p class="product-description">{{ cartItem.product.description }}</p>
+                </div>
+                <div>
+                  <div class="row">
+                    <div class="col-md-1">
+                      <button class="btn btn-primary">+</button>
+                    </div>
+                    <div class="col-md-1">
+                      <button class="btn btn-danger">-</button>
+                    </div>
+                    <button class="col-md-3 btn btn-outline-success">Add to checkout</button>
+                    <button class="col-md-3 btn btn-danger">Remove from Cart</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="quantity">
+            <p>Quantity: {{ cartItem.quantity }}</p>
+          </div>
+        </div>
+      </div>
+      
     </div>
+
+    
   
 
     <div class="col-md-3 order-summary">
       <h2>Order Summary</h2>
       <p>Total Items: {{ orderSummary.totalItems }}</p>
       <p>Total Amount: ${{ orderSummary.totalAmount }}</p>
-      <button routerLink="/orders" class="btn btn-primary">Checkout</button>
+      <label for="shipping-address">Shipping Address</label>
+      <input [(ngModel)]="shippingAddress" id="shipping-address" type="text">
+      <label for="recipient">Recipient Name</label>
+      <input [(ngModel)]="recipientName" id="recipient" type="text">
+      <button (click)="handleCheckout()" class="btn btn-primary">Checkout</button>
+      <button (click)="handlePayment()" class="btn btn-primary">Checkout</button>
     </div>
   </div>
   
