--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -1,1 +1,48 @@
-<p>orders works!</p>
+
+
+<div class="order-summary">
+    <h2>Order History</h2>
+    <div class="order-row" *ngFor="let order of orders">
+      <div class="order-info">
+        <p><strong>Order ID:</strong> {{ order.id }}</p>
+        <p><strong>Order Date:</strong> {{ order.orderDate | date }}</p>
+        <p><strong>Recipient Name:</strong> {{ order.customerName }}</p>
+        <p><strong>Total Amount:</strong> ${{ order.totalAmount }}</p>
+        <p><strong>Order Status:</strong> {{ order.orderStatus }}</p>
+      </div>
+    </div>
+  </div>
+  
+
+
+<div *ngFor="let order of orders" class="order-details">
+    <h2>Order Details</h2>
+    <p><strong>Order ID:</strong> {{ order.id }}</p>
+    <p><strong>Recipient Name:</strong> {{ order.customerName }}</p>
+    <p><strong>Order Date:</strong> {{ order.orderDate | date }}</p>
+    <p><strong>Shipping Address:</strong> {{ order.shippingAddress }}</p>
+  
+    <h3>Order Items</h3>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Product Name</th>
+          <th>Quantity</th>
+          <th>Unit Price</th>
+          <th>Total Price</th>
+        </tr>
+      </thead>
+      <!-- <tbody>
+        <tr *ngFor="let item of order.orderItems">
+          <td>{{ item.productName }}</td>
+          <td>{{ item.quantity }}</td>
+          <td>${{ item.unitPrice }}</td>
+          <td>${{ item.totalPrice }}</td>
+        </tr>
+      </tbody> -->
+    </table>
+  
+    <p><strong>Total Amount:</strong> ${{ order.totalAmount }}</p>
+    <p><strong>Order Status:</strong> {{ order.orderStatus }}</p>
+  </div>
+  
