--- a/src/app/components/product/product-card/product-card.component.css
+++ b/src/app/components/product/product-card/product-card.component.css
@@ -8,6 +8,7 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     height: 100%;
+    cursor: pointer;
   }
   
   .product-image img {
@@ -19,4 +20,4 @@
     text-align: center;
   }
   
-  /* Add more styles as needed */
+  
