--- a/src/app/components/product/product-detail/product-detail.component.html
+++ b/src/app/components/product/product-detail/product-detail.component.html
@@ -3,6 +3,6 @@
     <img [src]="product.imageUrl" alt="{{ product.name }}" />
     <p>Description: {{ product.description }}</p>
     <p>Price: ${{ product.price }}</p>
-    <button class="btn btn-primary add-to-cart-button">Add to Cart</button>
-    <!-- Display other product details as needed -->
+    <p>count {{count | async}}</p>
+    <button class="btn btn-primary add-to-cart-button" (click)="increaseCount()"> Add To Cart</button>
   </div>
